company user can view and update own company details